--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,22 @@
 <html>
 <head>
   <title>Footbook</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <div class="navbar">
+      <div class="navbar-inner">
+        <a class="brand" href="#">Footbook</a>
+        <ul class="nav">
+          <li><%= link_to "All Statuses", statuses_path %></li>
+          <li><%= link_to "New Status", new_status_path %></li>
+        </ul>
+      </div>
+    </div>
+    <%= yield %>
+  </div>
 </body>
 </html>
