--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,27 @@
 </head>
 <body>
   <div class="container">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="navbar">
       <div class="navbar-inner">
-        <a class="brand" href="#">Footbook</a>
+        <%= link_to "Footbook", statuses_path, class: 'brand' %>
         <ul class="nav">
-          <li><%= link_to "All Statuses", statuses_path %></li>
+          <li><%= link_to "Home", statuses_path %></li>
           <li><%= link_to "New Status", new_status_path %></li>
+        </ul>
+        <ul class="nav pull-right">
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+                <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to 'Log In', new_user_session_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
