--- a/app/views/statuses/edit.html.erb
+++ b/app/views/statuses/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing status</h1>
+<legend>Edit Status</legend>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @status %> |
+<%= link_to 'Show', @status %> &middot;
 <%= link_to 'Back', statuses_path %>
