--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,12 @@
 </head>
 <body>
   <div class="container">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% flash.each do |type, message| %>
+      <div class="alert <%= flash_class type %>">
+        <button class="close" data-dismiss="alert">&times;</button>
+        <%= message %>
+      </div>
+    <% end %>
     <div class="navbar">
       <div class="navbar-inner">
         <%= link_to "Footbook", statuses_path, class: 'brand' %>
