--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,11 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.full_name %></a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-                <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to 'Log Out', logout_path %></li>
               </ul>
             </li>
           <% else %>
-            <li><%= link_to 'Log In', new_user_session_path %></li>
+            <li><%= link_to 'Log In', login_path %></li>
           <% end %>
         </ul>
       </div>
